font awesome added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cupcake">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.3/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Font Awesome  -->
+    <script src="https://kit.fontawesome.com/4eadbc1086.js" crossorigin="anonymous"></script>
     <!-- Google font Lato  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +24,8 @@
             extend: {
               colors: {
                 clifford: '#da373d',
+                'text-primary': '#FFF',
+                'text-secondary': '#121212',
               }
             }
           }
@@ -34,12 +38,15 @@
       </style>
 </head>
 <body class="font-lato">
+    <!-- header section start  -->
     <header>
 
     </header>
+    <!-- main section start  -->
     <main>
 
     </main>
+    <!-- footer section start  -->
     <footer>
 
     </footer>
