--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <!-- slider container -->
             <div class="carousel w-full">
                 <!-- slider 1 -->
-                <div id="slide1" class="carousel-item relative w-full">
-                    <img src="./images/banner1.png" class="w-full opacity-70 " />
+                <div id="slide1" class="carousel-item relative w-full bg-gradient-to-r from-[#121212] to-[#12121200] ">
+                    <img src="./images/banner1.png" class="w-full" />
                     <div
                         class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle bg-black text-white">❮</a>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <!-- slider 2 -->
-                <div id="slide2" class="carousel-item relative w-full">
+                <div id="slide2" class="carousel-item relative w-full bg-gradient-to-r from-[#121212] to-[#12121200] ">
                     <img src="./images/banner2.png" class="w-full opacity-70 " />
                     <div
                         class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <!-- slider 3 -->
-                <div id="slide3" class="carousel-item relative w-full">
+                <div id="slide3" class="carousel-item relative w-full bg-gradient-to-r from-[#121212] to-[#12121200] ">
                     <img src="./images/banner3.png" class="w-full opacity-70 " />
                     <div
                         class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <!-- slider 4 -->
-                <div id="slide4" class="carousel-item relative w-full">
+                <div id="slide4" class="carousel-item relative w-full bg-gradient-to-r from-[#121212] to-[#12121200] ">
                     <img src="./images/banner4.png" class="w-full opacity-70 " />
                     <div
                         class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -209,32 +209,32 @@
         </div>
         <!-- countdown -->
         <div>
-            <div class="grid grid-flow-col gap-5 text-center auto-cols-max mt-3">
-                <div class="flex flex-col">
-                    <span class="countdown text-5xl">
-                        <span style="--value:29;"></span>
-                    </span>
-                    days
-                </div>
-                <div class="flex flex-col">
-                    <span class="countdown text-5xl">
-                        <span style="--value:15;"></span>
-                    </span>
-                    hours
-                </div>
-                <div class="flex flex-col">
-                    <span class="countdown  text-5xl">
-                        <span style="--value:25;"></span>
-                    </span>
-                    min
-                </div>
-                <div class="flex flex-col">
-                    <span class="countdown text-5xl">
-                        <span style="--value:08;"></span>
-                    </span>
-                    sec
-                </div>
+          <div class="grid grid-flow-col gap-5 text-center auto-cols-max mt-3">
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:29;"></span>
+              </span>
+              days
+            </div> 
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:15;"></span>
+              </span>
+              hours
+            </div> 
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:25;"></span>
+              </span>
+              min
+            </div> 
+            <div class="flex flex-col">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:08;"></span>
+              </span>
+              sec
             </div>
+          </div>
         </div>
     </div>
     <!-- deal cards -->
@@ -576,6 +576,79 @@
     </div>
 </section>
 <!-- deal section ends here -->
+        <!-- meet team section starts here -->
+        <section class="my-10 text-[#fff]">
+          <div class="hero bg-bg-team w-full lg:h-[600px]">
+              <div class="hero-overlay bg-opacity-75"></div>
+              <div class="hero-content w-full h-full">
+                  <div class=" w-full h-full lg:p-5 text-center ">
+                      <!-- heading -->
+                      <h2 class="text-3xl lg:text-5xl font-lato font-extrabold lg:mt-16 mb-5">Meet the team section
+                      </h2>
+                      <p class="lg:text-base font-lato font-medium lg:w-[600px] mx-auto mb-4">Contrary to popular
+                          belief, is not simply random text. It has roots in a piece of classical Latin literature
+                          from 45 BC, making it over 2000 years old.</p>
+
+                      <!-- instructor container -->
+                      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:mt-14 gap-1">
+                          <!-- instructor 1 -->
+                          <div class="mb-4">
+                              <img class="w-[100px] h-[100px] mx-auto" src="./images/member1.png" alt="">
+                              <h4 class="text-2xl font-lato font-bold lg:mt-7">Awlad Hossain</h4>
+                              <p class="text-base font-lato font-medium">Fruits Expert</p>
+                              <!-- icons -->
+                              <div class="flex justify-center
+                              mt-3 gap-2">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                              </div>
+                          </div>
+                          <!-- instructor 2 -->
+                          <div class="mb-4">
+                              <img class="w-[100px] h-[100px] mx-auto" src="./images/member2.png" alt="">
+                              <h4 class="text-2xl font-lato font-bold lg:mt-7">Safia Chowdhury</h4>
+                              <p class="text-base font-lato font-medium">Fruits Expert</p>
+                              <!-- icons -->
+                              <div class="flex justify-center
+                              mt-3 gap-2">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                              </div>
+                          </div>
+                          <!-- instructor 3 -->
+                          <div class="mb-4">
+                              <img class="w-[100px] h-[100px] mx-auto" src="./images/member3.png" alt="">
+                              <h4 class="text-2xl font-lato font-bold lg:mt-7">Rokib Hossain</h4>
+                              <p class="text-base font-lato font-medium">Fruits Expert</p>
+                              <!-- icons -->
+                              <div class="flex justify-center
+                              mt-3 gap-2">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                              </div>
+                          </div>
+                          <!-- instructor 4 -->
+                          <div class="mb-4">
+                              <img class="w-[100px] h-[100px] mx-auto" src="./images/member4.png" alt="">
+                              <h4 class="text-2xl font-lato font-bold lg:mt-7">Chaity</h4>
+                              <p class="text-base font-lato font-medium">Fruits Expert</p>
+                              <!-- icons -->
+                              <div class="flex justify-center
+                              mt-3 gap-2">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/fb-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/twitter-member.png" alt="">
+                                  <img class="w-[24px] h-[24px]" src="./images/icons/linkedin-member.png" alt="">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <!-- meet team section ends here -->
     </main>
     <!-- footer section start  -->
     <footer>
