--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                       <!-- condition 1 -->
                       <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
                           <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
-                              <img class="w-[20px] mx-auto" src="./images/icons/group.png" alt="">
+                              <img class="w-[20px] mx-auto" src="./images/group.png" alt="">
                           </div>
                           <div class="max-w-sm lg:w-auto mx-auto lg:mx-0 text-center lg:text-start">
                               <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Dedicated Team</h4>
@@ -680,7 +680,7 @@
                       <!-- condition 2 -->
                       <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
                           <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
-                              <img class="w-[20px] mx-auto" src="./images/icons/love.png" alt="">
+                              <img class="w-[20px] mx-auto" src="./images/love.png" alt="">
                           </div>
                           <div class="max-w-sm lg:w-auto mx-auto lg:mx-0 text-center lg:text-start">
                               <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Fresh is Best</h4>
@@ -692,7 +692,7 @@
                       <!-- condition 3 -->
                       <div class="flex flex-col lg:flex-row items-center gap-2 mb-5 mt-3">
                           <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
-                              <img class="w-[20px] mx-auto" src="./images/icons/gift-box.png" alt="">
+                              <img class="w-[20px] mx-auto" src="./images/gift-box.png" alt="">
                           </div>
                           <div class="max-w-sm lg:w-auto mx-auto lg:mx-0 text-center lg:text-start">
                               <h4 class="text-2xl text-[#121212] font-lato font-extrabold">Gift Certificates</h4>
@@ -718,7 +718,7 @@
                                   employees are there for you to pick the most amazing and fresh fruits.</p>
                           </div>
                           <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
-                              <img class="w-[20px] mx-auto" src="./images/icons/fruit.png" alt="">
+                              <img class="w-[20px] mx-auto" src="./images/fruit.png" alt="">
                           </div>
                       </div>
                       <!-- condition 2 -->
@@ -731,7 +731,7 @@
                                   employees are there for you to pick the most amazing and fresh fruits.</p>
                           </div>
                           <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
-                              <img class="w-[20px] mx-auto" src="./images/icons/ice-cream.png" alt="">
+                              <img class="w-[20px] mx-auto" src="./images/ice-cream.png" alt="">
                           </div>
                       </div>
                       <!-- condition 3 -->
@@ -744,7 +744,7 @@
                                   employees are there for you to pick the most amazing and fresh fruits.</p>
                           </div>
                           <div class="bg-[#E7E7E7] w-[50px] h-[40px] p-3 rounded-full ">
-                              <img class="w-[20px] mx-auto" src="./images/icons/like.png" alt="">
+                              <img class="w-[20px] mx-auto" src="./images/like.png" alt="">
                           </div>
                       </div>
                   </div>
