footer section added

--- a/index.html
+++ b/index.html
@@ -754,8 +754,31 @@
       <!-- why choose section ends here  -->
     </main>
     <!-- footer section start  -->
-    <footer>
-
+    <footer class="bg-[#121212]">
+      <section class="max-w-7xl mx-auto">
+        <div class="text-[#fff] lg:w-[700px] mx-auto p-12">
+           <div class="flex gap-3 justify-center mb-8 ">
+               <img class="w-[50px]" src="./images/logo.png" alt="">
+               <h3 class="text-4xl lg:text-[#fff] font-lato font-bold">Fruit Burst</h3>
+           </div>
+           <div class="flex flex-wrap list-none justify-center gap-6 mb-8">
+                   <li><a>Home</a></li>
+                   <li><a>About Us</a></li>
+                   <li><a>Shop</a></li>
+                   <li><a>All Fruits</a></li>
+                   <li><a>Support</a></li>
+                   <li><a>My Account</a></li>
+           </div>
+           <div class="flex justify-center gap-6 ">
+              <a href="#" class="w-[30px] h-[30px]"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#" class="w-[30px] h-[30px]"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#" class="w-[30px] h-[30px]"><i class="fa-brands fa-youtube"></i></a>
+              <a href="#" class="w-[30px] h-[30px]"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="#" class="w-[30px] h-[30px]"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#" class="w-[30px] h-[30px]"><i class="fa-brands fa-apple"></i></a>
+           </div>
+        </div>
+       </section>
     </footer>
 </body>
 </html>
